--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <span class="menu-text">Kreatin</span>
           </li>
           <li data-value="kafein">
-            <img src="icons/Kafein.jpg" alt="Kafein" class="menu-icon-img">
+            <img src="icons/kafein.jpg" alt="Kafein" class="menu-icon-img">
             <span class="menu-text">Kafein</span>
           </li>
           <li data-value="sitrulin">
