--- a/sections/arjinin.html
+++ b/sections/arjinin.html
@@ -14,7 +14,7 @@
       <div class="not-metin">
         <strong>Ne işe yarar:</strong> Nitrik oksit (NO) üretimini destekleyerek damarları genişletir, kan akışını ve “pump” etkisini artırır; dayanıklılığa katkı sağlayabilir.<br>
         <strong>Nasıl kullanılır:</strong> Önerilen miktar, antrenmandan 30–60 dakika önce 3–6 gram alınmasıdır.<br>
-        <strong>Etkisi ne zaman görülür:</strong> Akut etki 30–60 dakika içinde hissedilebilir; düzenli kullanım şart değildir.
+        <strong>Etki tipi ve süresi nedir:</strong> <span class="akut-vurgu">Etkisi akuttur.</span> 30–60 dakika içinde hissedilebilir.
       </div>
     </div>
 
