--- a/sections/bcaa.html
+++ b/sections/bcaa.html
@@ -13,7 +13,7 @@
       <div class="not-metin">
         <strong>Ne işe yarar:</strong> Protein eksikliği durumunda kas yıkımını azaltmaya ve toparlanmayı desteklemeye yardımcı olabilir.<br>
         <strong>Nasıl kullanılır:</strong> Önerilen doz antrenman öncesi/sonrası 5-10 gram arasıdır.<br>
-        <strong>Etkisi ne zaman görülür:</strong> Akut toparlanma ve kas ağrısı azalmasında hızlı etki gösterebilir.
+        <strong>Etki tipi ve süresi nedir:</strong> <span class="akut-vurgu">Etkisi akuttur.</span> Akut toparlanma ve kas ağrısı azalmasında hızlı etki gösterebilir.
       </div>
     </div>
 
