--- a/sections/beta.html
+++ b/sections/beta.html
@@ -14,7 +14,7 @@
       <div class="not-metin">
         <strong>Ne işe yarar:</strong> Laktik asiti tamponlayarak egzersiz yorgunluğunu geciktirir ve performansı artırır.<br>
         <strong>Nasıl kullanılır:</strong> Genelde günün herhangi bir saatinde 3–6 gram arası alarak kullanılır.<br>
-        <strong>Etkisi ne zaman görülür:</strong> 3–4 hafta içinde hissedilmeye başlar.
+        <strong>Etki tipi ve süresi nedir:</strong> <span class="birikimli-vurgu">Etkisi birikimlidir.</span> 3–4 hafta içinde hissedilmeye başlar.
       </div>
     </div>
 
