--- a/sections/eaa.html
+++ b/sections/eaa.html
@@ -14,7 +14,7 @@
       <div class="not-metin">
         <strong>Ne işe yarar:</strong> Protein alımı yetersiz olduğunda kas protein sentezini desteklemeye yardımcı olur.<br>
         <strong>Nasıl kullanılır:</strong> Önerilen doz antrenman öncesi/sonrası 10-20 gram arasıdır.<br>
-        <strong>Etkisi ne zaman görülür:</strong> 2–4 hafta içinde toparlanmada fark hissedilebilir.
+        <strong>Etki tipi ve süresi nedir:</strong> <span class="karma-vurgu">Etkisi hem kısa hem "uzun" vadelidir.</span> 2–4 hafta içinde toparlanmada fark hissedilebilir.
       </div>
     </div>
 
