--- a/sections/glutamin.html
+++ b/sections/glutamin.html
@@ -19,7 +19,7 @@
       <div class="not-metin">
         <strong>Ne işe yarar:</strong> Bağırsak sağlığını destekler, yorgunluk hissine etkisi minimal.<br>
         <strong>Nasıl kullanılır:</strong> Spor sonrası veya yatmadan önce 5-10 gram alınır.<br>
-        <strong>Etkisi ne zaman görülür:</strong> Bağırsak semptomlarında birkaç gün, spor performansında ise çok sınırlı.
+        <strong>Etki tipi ve süresi nedir:</strong> <span class="uzun-vade-vurgu">Etkisi uzun vadelidir.</span> Bağırsak semptomları ve toparlanma birkaç gün, spor performansında etkisi ise çok sınırlıdır.
       </div>
     </div>
 
