--- a/sections/kafein.html
+++ b/sections/kafein.html
@@ -13,7 +13,8 @@
       <div class="not-metin">
         <strong>Ne işe yarar:</strong> Merkezi sinir sistemini uyararak uyanıklığı artırır, yorgunluğu azaltır, odaklanmayı güçlendirir ve egzersiz performansını (özellikle dayanıklılık ve güç) artırır.
         <br><strong>Nasıl kullanılır:</strong> Önerilen doz, antrenmandan 30-60 dakika önce alınır. Kafein toleransı kişiden kişiye değiştiği için düşük dozla başlayıp kademeli artırmak önemlidir.
-        <br><strong>Etkisi ne zaman görülür:</strong> Alımdan sonra 30-60 dakika içinde etkileri başlar.
+        <br><strong>Etki tipi ve süresi nedir:</strong> <span class="akut-vurgu">Etkisi akuttur.</span> Alımdan sonra 30-60 dakika içinde etkileri başlar ve vücutta birikim yapmaz.
+
       </div>
     </div>
 
