--- a/sections/karnitin.html
+++ b/sections/karnitin.html
@@ -12,7 +12,7 @@
       <div class="not-metin">
         <strong>Ne işe yarar:</strong> Yağ asitlerini mitokondriye taşır. Eksikliği olan bireylerde enerji üretimini ve egzersiz kapasitesini destekleyebilir.
         <br><strong>Nasıl kullanılır:</strong> Genellikle karbonhidrat içeren bir öğünle birlikte (emilimi artırmak için) veya antrenman öncesi alınır. Düzenli ve uzun süreli kullanım önemlidir.
-        <br><strong>Etkisi ne zaman görülür:</strong> Etkileri hemen değil, uzun süreli ve düzenli kullanımda (haftalar/aylar) ortaya çıkar. Çoğu sağlıklı bireyde belirgin performans veya yağ yakımı etkisi görülmeyebilir.
+        <br><strong>Etki tipi ve süresi nedir:</strong> <span class="birikimli-vurgu">Etkisi birikimlidir.</span> Etkileri hemen değil, uzun süreli ve düzenli kullanımda (haftalar/aylar) ortaya çıkar. Çoğu sağlıklı bireyde belirgin performans veya yağ yakımı etkisi görülmeyebilir.
       </div>
     </div>
 
