--- a/sections/sitrulin.html
+++ b/sections/sitrulin.html
@@ -13,7 +13,7 @@
       <div class="not-metin">
         <strong>Ne işe yarar:</strong> Vücutta nitrik oksit (NO) üretimini destekler, kan akışını iyileştirir, antrenman sırasında "pump" hissini artırır, kaslara besin ve oksijen iletimini destekler ve yorgunluğu geciktirir.
         <br><strong>Nasıl kullanılır:</strong> Genellikle antrenmandan 30–60 dakika önce alınır. Dinlenme günlerinde alınması zorunlu değildir ancak genel dolaşım sağlığı ve toparlanma için saf L-Sitrülin (yaklaşık 1–3 gram) düşünülebilir.
-        <br><strong>Etkisi ne zaman görülür:</strong> İlk kullanımdan itibaren 30–60 dakika içinde etkileri (pump, dayanıklılık) hissedilebilir. Düzenli kullanımda daha belirginleşir.
+        <br><strong>Etki tipi ve süresi nedir:</strong> <span class="akut-vurgu">Etkisi akuttur.</span> İlk kullanımdan itibaren 30–60 dakika içinde etkileri (pump, dayanıklılık) hissedilebilir. Düzenli kullanımda daha belirginleşir.
       </div>
     </div>
 
