--- a/sections/kreatin.html
+++ b/sections/kreatin.html
@@ -7,22 +7,20 @@
 
   <div class="supplement-section-info">
 
-    <!-- Bilgilendirme -->
     <div class="info-section">
       <h5 class="info-header">Kreatin Hakkında Bilgi:</h5>
       <div class="not-metin">
-        <strong>Ne işe yarar:</strong> Kaslarda enerji depolayarak kısa süreli, yüksek yoğunluklu egzersizlerde performansı iyileştirir. Güç artışı ve kas kütlesi kazanımına yardımcı olur.
+        <strong>Ne işe yarar:</strong> Kaslardaki fosfokreatin depolarını doldurarak patlayıcı güç ve kısa süreli performans artışı sağlar. Hücre içine su çekerek kasları daha dolgun gösterir ve bu hacim artışıyla birlikte kas kazanımını da destekler.
         <br><strong>Nasıl kullanılır:</strong> Günlük idame dozu günün herhangi bir saati alınabilir. Yükleme evresi isteğe bağlıdır.
-        <br><strong>Etkisi ne zaman görülür:</strong> Yükleme evresiyle 5–7 gün içinde, yükleme yapılmadan 3–4 haftada kas depoları dolunca etkileri görülmeye başlar.
+        <br><strong>Etki tipi ve süresi nedir :</strong> <span class="birikimli-vurgu">Etkisi birikimlidir.</span> Yükleme yapılırsa 5–7 gün içinde, yapılmazsa 3–4 hafta içinde hissedilmeye başlanır.
+
       </div>
     </div>
 
-    <!-- SSS -->
     <div class="faq-section">
       <h5 class="info-header">Sıkça Sorulan Sorular:</h5>
       <div class="accordion-container">
 
-        <!-- 1. Sağlığa zararlı mı? -->
         <div class="accordion-item">
           <button class="accordion-header">Kreatin sağlığa zararlı mı?</button>
           <div class="accordion-content">
@@ -36,21 +34,6 @@
           </div>
         </div>
 
-        <!-- 2. Etkisi ne zaman görülür? -->
-        <div class="accordion-item">
-          <button class="accordion-header">Etkisi ne zaman görülür?</button>
-          <div class="accordion-content">
-            <div class="not-metin">
-              <ul>
-                <li>Yükleme yapılırsa 5–7 gün içinde kas kreatin depoları dolmaya başlar.</li>
-                <li>Yükleme yapılmazsa bu süreç 3–4 haftayı bulabilir.</li>
-                <li>Kaslardaki kreatin doygunluğu sağlandığında güç artışı ve performans etkisi hissedilir.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <!-- 3. Hangi form en etkilidir? -->
         <div class="accordion-item">
           <button class="accordion-header">Hangi kreatin formu en etkilidir?</button>
           <div class="accordion-content">
@@ -64,7 +47,6 @@
           </div>
         </div>
 
-        <!-- 4. Saç döker mi? -->
         <div class="accordion-item">
           <button class="accordion-header">Saç döker mi?</button>
           <div class="accordion-content">
@@ -76,7 +58,6 @@
           </div>
         </div>
 
-        <!-- 5. Su içmek gerekir mi? -->
         <div class="accordion-item">
           <button class="accordion-header">Kreatin kullanırken daha fazla su içmeli miyim?</button>
           <div class="accordion-content">
@@ -92,7 +73,6 @@
       </div>
     </div>
 
-    <!-- Doz Bilgisi -->
     <div class="doz-bilgisi">
       <h6>Doz Aşımı (Hafifçe Yüksek Alım):</h6>
       <ul class="not-maddeler">
