--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
       <div class="footer-link">
           <a href="kaynakca.html" target="_blank">Kaynakça</a>
       </div>
+      <div class="footer-link">
+          <a href="feedback.html" target="_blank">Öneri ve Şikayet</a>
+      </div>
       <p>&copy; 2025 Fitness Hesaplayıcı. Tüm Hakları Saklıdır.</p>
     </footer>
   </div>
