--- a/index.html
+++ b/index.html
@@ -133,5 +133,6 @@
   <script src="js/yagOraniHesaplayici.js"></script>
   <script src="js/main.js"></script>
   <script src="js/theme.js"></script>
+  <script src="https://cdn.counter.dev/script.js" data-id="e48fee10-9ad6-405d-ab18-18c591dced37" data-utcoffset="3"></script>
 </body>
 </html>
