--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Geliştirilmiş Fitness Hesaplayıcı</title>
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Geliştirilmiş Fitness Hesaplayıcı">
+  <meta property="og:description" content="Protein, kreatin, kafein ve diğer supplement ihtiyaçlarınızı hesaplayan kapsamlı fitness aracı.">
+  <meta property="og:image" content="https://drcremaster.github.io/Fitness-hesaplama/icons/onizleme.jpg">
+  <meta property="og:url" content="https://drcremaster.github.io/Fitness-hesaplama">
+  <meta property="og:site_name" content="Fitness Hesaplayıcı">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Geliştirilmiş Fitness Hesaplayıcı">
+  <meta name="twitter:description" content="Protein, kreatin, kafein ve diğer supplement ihtiyaçlarınızı hesaplayan kapsamlı fitness aracı.">
+  <meta name="twitter:image" content="https://drcremaster.github.io/Fitness-hesaplama/icons/onizleme.jpg">
+  
   <link rel="stylesheet" href="css/style.css">
 </head>
-
-<script src="js/script.js"></script>
-</body>
-</html>
 
 <body class="anapage">
 
@@ -133,6 +144,7 @@
   <script src="js/yagOraniHesaplayici.js"></script>
   <script src="js/main.js"></script>
   <script src="js/theme.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://cdn.counter.dev/script.js" data-id="e48fee10-9ad6-405d-ab18-18c591dced37" data-utcoffset="3"></script>
 </body>
 </html>
