--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Geliştirilmiş Fitness Hesaplayıcı</title>
+  <title>Kişisel Supplement Doz Hesaplayıcı</title>
   
   <!-- Open Graph Meta Tags -->
   <meta property="og:type" content="website">
