--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- Open Graph Meta Tags -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Geliştirilmiş Fitness Hesaplayıcı">
+  <meta property="og:title" content="Kişisel Supplement Doz Hesaplayıcı">
   <meta property="og:description" content="Protein, kreatin, kafein ve diğer supplement ihtiyaçlarınızı hesaplayan kapsamlı fitness aracı.">
   <meta property="og:image" content="https://drcremaster.github.io/Fitness-hesaplama/icons/onizleme.jpg">
   <meta property="og:url" content="https://drcremaster.github.io/Fitness-hesaplama">
@@ -15,7 +15,7 @@
   
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Geliştirilmiş Fitness Hesaplayıcı">
+  <meta name="twitter:title" content="Kişisel Supplement Doz Hesaplayıcı">
   <meta name="twitter:description" content="Protein, kreatin, kafein ve diğer supplement ihtiyaçlarınızı hesaplayan kapsamlı fitness aracı.">
   <meta name="twitter:image" content="https://drcremaster.github.io/Fitness-hesaplama/icons/onizleme.jpg">
   
@@ -32,7 +32,7 @@
       </button>
     </div>
 
-    <h2>Geliştirilmiş Fitness Hesaplayıcı</h2>
+    <h2>Kişisel Supplement Doz Hesaplayıcı</h2>
 
     <div id="dropdownMenu" class="dropdown-container">
       <h3 id="dropdownButton" class="dropdown-button">
