--- a/kaynakca.html
+++ b/kaynakca.html
@@ -521,7 +521,7 @@
             <!-- 8. BCAA -->
             <div class="supplement-card" onclick="toggleKaynak('bcaa')">
                 <div class="supplement-header">
-                    <h3 class="supplement-title">BCAA</h3>
+                    <h3 class="supplement-title">BCAA (Dallı Zincirli Amino Asitler)</h3>
                     <span class="toggle-icon" id="bcaa-icon">▼</span>
                 </div>
                 <div class="kaynak-listesi" id="bcaa-kaynak">
