--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Kişisel Supplement Doz Hesaplayıcı">
   <meta property="og:description" content="Protein, kreatin, kafein ve diğer supplement ihtiyaçlarınızı hesaplayan kapsamlı fitness aracı.">
-  <meta property="og:image" content="https://drcremaster.github.io/Fitness-hesaplama/icons/onizleme.jpg">
+  <meta property="og:image" content="https://drcremaster.github.io/Kisisel-Supplement-Doz-Hesaplama//icons/onizleme.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:type" content="image/jpeg">
-  <meta property="og:url" content="https://drcremaster.github.io/Fitness-hesaplama">
+  <meta property="og:url" content="https://drcremaster.github.io/Kisisel-Supplement-Doz-Hesaplama/">
   <meta property="og:site_name" content="Fitness Hesaplayıcı">
   
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Kişisel Supplement Doz Hesaplayıcı">
   <meta name="twitter:description" content="Protein, kreatin, kafein ve diğer supplement ihtiyaçlarınızı hesaplayan kapsamlı fitness aracı.">
-  <meta name="twitter:image" content="https://drcremaster.github.io/Fitness-hesaplama/icons/onizleme.jpg">
+  <meta name="twitter:image" content="https://drcremaster.github.io/Kisisel-Supplement-Doz-Hesaplama//icons/onizleme.jpg">
   <meta name="twitter:site" content="@kullanici_adiniz">
   
   <!-- WhatsApp için ek meta etiketler -->
-  <meta property="og:image:secure_url" content="https://drcremaster.github.io/Fitness-hesaplama/icons/onizleme.jpg">
+  <meta property="og:image:secure_url" content="https://drcremaster.github.io/Kisisel-Supplement-Doz-Hesaplama//icons/onizleme.jpg">
   <meta name="theme-color" content="#3b5998">
   
   <link rel="stylesheet" href="css/style.css">
