--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Kişisel Supplement Doz Hesaplayıcı">
   <meta property="og:description" content="Protein, kreatin, kafein ve diğer supplement ihtiyaçlarınızı hesaplayan kapsamlı fitness aracı.">
-  <meta property="og:image" content="https://drcremaster.github.io/Kisisel-Supplement-Doz-Hesaplama/icons/onizleme.jpg">
+  <meta property="og:image" content="https://drcremaster.github.io/Kisisel-Supplement-Doz-Hesaplama/icons/onizleme.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="1200">
   <meta property="og:image:type" content="image/jpeg">
@@ -18,10 +18,10 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Kişisel Supplement Doz Hesaplayıcı">
   <meta name="twitter:description" content="Protein, kreatin, kafein ve diğer supplement ihtiyaçlarınızı hesaplayan kapsamlı fitness aracı.">
-  <meta name="twitter:image" content="https://drcremaster.github.io/Kisisel-Supplement-Doz-Hesaplama/icons/onizleme.jpg">
+  <meta name="twitter:image" content="https://drcremaster.github.io/Kisisel-Supplement-Doz-Hesaplama/icons/onizleme.png">
   <meta name="twitter:site" content="@kullanici_adiniz">
   
-  <meta property="og:image:secure_url" content="https://drcremaster.github.io/Kisisel-Supplement-Doz-Hesaplama/icons/onizleme.jpg">
+  <meta property="og:image:secure_url" content="https://drcremaster.github.io/Kisisel-Supplement-Doz-Hesaplama/icons/onizleme.png">
   <meta name="theme-color" content="#3b5998">
   
   <link rel="stylesheet" href="css/style.css">
