--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kişisel Supplement Doz Hesaplayıcı</title>
-  
+
+  <meta name="description" content="Protein, kreatin, kafein ve diğer supplement ihtiyaçlarınızı hesaplayan kapsamlı bilimsel supplement doz hesaplama aracı.">
+  <meta name="keywords" content="protein, kreatin, kafein, supplement, hesaplayıcı, doz, beta alanin, sitrulin, sitrulin malat, bilim, bilimsel, kişisel doz hesaplama, kilo bazlı doz, spor, fitness, preworkout, arjinin, bcaa, eaa, karnitin, glutamin, pubmed, hipertrofi, whey, supplement doz hesap">
+
   <meta property="og:type" content="website">
   <meta property="og:title" content="Kişisel Supplement Doz Hesaplayıcı">
   <meta property="og:description" content="Protein, kreatin, kafein ve diğer supplement ihtiyaçlarınızı hesaplayan kapsamlı fitness aracı.">
