--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <meta name="theme-color" content="#3b5998">
   
   <link rel="stylesheet" href="css/style.css">
+
+  <link rel="icon" type="image/png" href="favicon.png">
+
 </head>
 
 <body class="anapage">
